# OpenViking

./: CONTRIBUTING.md  CONTRIBUTING_CN.md  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: _build.yml
bot/vikingbot/cli/: commands.py
build_support/: __init__.py  x86_profiles.py
docs/design/: operation_telemetry.md
examples/misc/: operation_telemetry_demo.py
openviking/: async_client.py
openviking/client/: local.py  session.py
openviking/models/: retry.py
openviking/models/embedder/: base.py  gemini_embedders.py  jina_embedders.py  litellm_embedders.py  minimax_embedders.py  openai_embedders.py  vikingdb_embedders.py  volcengine_embedders.py  voyage_embedders.py
openviking/models/vlm/: base.py  llm.py
openviking/models/vlm/backends/: litellm_vlm.py  openai_vlm.py  volcengine_vlm.py
openviking/parse/: tree_builder.py
openviking/resource/: resource_lock.py
openviking/retrieve/: hierarchical_retriever.py
openviking/server/: models.py
openviking/server/routers/: resources.py  search.py  sessions.py
openviking/service/: resource_service.py  search_service.py  session_service.py
openviking/session/: memory_deduplicator.py  session.py
openviking/storage/: collection_schemas.py  viking_fs.py
openviking/storage/queuefs/: embedding_msg.py  embedding_tracker.py  semantic_dag.py  semantic_msg.py  semantic_processor.py  semantic_queue.py
openviking/telemetry/: __init__.py  execution.py  operation.py  request.py  resource_hooks.py  retriever_hooks.py  runtime.py  search_hooks.py  session_hooks.py
openviking/utils/: embedding_utils.py  resource_processor.py  skill_processor.py  summarizer.py
openviking_cli/client/: base.py  http.py  sync_http.py
openviking_cli/utils/config/: embedding_config.py
scripts/: viking_resource_inspector.py
src/: CMakeLists.txt  pybind11_interface.cpp
src/index/detail/vector/common/: space_int8.h  space_ip.h  space_l2.h
src/index/detail/vector/common/x86/: int8_avx2.cpp  ip_avx2.cpp  ip_avx512.cpp  l2_avx2.cpp  l2_avx512.cpp  simd_dispatch.cpp  simd_dispatch.h
tests/: test_session_task_tracking.py  test_telemetry_runtime.py
tests/client/: test_resource_management.py
tests/engine/: CMakeLists.txt  test_x86_simd_dispatch.cpp
tests/examples/: test_operation_telemetry_demo.py
tests/misc/: test_x86_build_profiles.py
tests/server/: conftest.py  test_api_resources.py  test_api_search.py  test_api_sessions.py  test_http_client_sdk.py
tests/storage/: test_sync_diff_callback.py
tests/telemetry/: test_execution.py  test_layering_rules.py  test_resource_summary.py
tests/unit/: test_backward_compat.py  test_embedding_retry_integration.py  test_retry.py  test_retry_config.py  test_stream_config_vlm.py  test_vlm_retry_integration.py
